minikube_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-consul-mutator-rs
  namespace: k8s-consul-mutator-rs
  labels:
    service: k8s-consul-mutator-rs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: k8s-consul-mutator-rs
